# chunklet-py

./: .coverage  .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Key features.txt  LICENSE  README.MD  README.md  RELEASE.md  These files store formatted text and plain text.txt  about_code_chunker.md  audit_migration.py  bench.py  benchmark.py  build_docs.sh  converters_vs_processors.md  demo.py  mkdocs.yml  pyproject.toml  test_results.txt  todo.txt  token_chunking_exemple.py  training_config.txt  versions.json  what_is_new v2.0.0.md
.github/workflows/: build-and-test.yml  format.yml  lint
1.4.0/: 404.html  index.html
1.4.0/exceptions-and-warnings/: index.html
1.4.0/getting-started/: index.html
1.4.0/getting-started/cli/: index.html
1.4.0/getting-started/programmatic/: index.html
1.4.0/installation/: index.html
1.4.0/internal-flow/: index.html
1.4.0/models/: index.html
1.4.0/search/: search_index.json
1.4.0/supported-languages/: index.html
1.4.0/utils/: index.html
2.0.0/: 404.html  index.html  objects.inv  sitemap.xml
2.0.0/exceptions-and-warnings/: index.html
2.0.0/getting-started/cli/: index.html
2.0.0/getting-started/installation/: index.html
2.0.0/getting-started/metadata/: index.html
2.0.0/getting-started/programmatic/: index.html
2.0.0/getting-started/programmatic/code_chunker/: index.html
2.0.0/getting-started/programmatic/document_chunker/: index.html
2.0.0/getting-started/programmatic/plain_text_chunker/: index.html
2.0.0/getting-started/programmatic/sentence_splitter/: index.html
2.0.0/migration/: index.html
2.0.0/reference/chunklet/: index.html
2.0.0/reference/chunklet/cli/: index.html
2.0.0/reference/chunklet/code_chunker/: index.html
2.0.0/reference/chunklet/common/: index.html
2.0.0/reference/chunklet/document_chunker/: index.html
2.0.0/reference/chunklet/exceptions/: index.html
2.0.0/reference/chunklet/plain_text_chunker/: index.html
2.0.0/search/: search_index.json
2.0.0/supported-languages/: index.html
2.0.0/troubleshooting/: index.html
2.0.0/whats-new/: index.html
2.1.0/: 404.html  index.html  objects.inv  reddit_ann_post.txt  sitemap.xml
2.1.0/exceptions-and-warnings/: index.html
2.1.0/getting-started/cli/: index.html
2.1.0/getting-started/installation/: index.html
2.1.0/getting-started/metadata/: index.html
2.1.0/getting-started/programmatic/: index.html
2.1.0/migration/: index.html
2.1.0/reference/chunklet/: index.html
2.1.0/reference/chunklet/cli/: index.html
2.1.0/search/: search_index.json
2.1.0/supported-languages/: index.html
2.1.0/troubleshooting/: index.html
2.1.0/whats-new/: index.html
2.2.0/: 404.html  index.html  objects.inv  sitemap.xml
2.2.0/exceptions-and-warnings/: index.html
2.2.0/getting-started/cli/: index.html
2.2.0/getting-started/installation/: index.html
2.2.0/getting-started/metadata/: index.html
2.2.0/getting-started/programmatic/: index.html
2.2.0/how-to/custom-tokenizer/: index.html
2.2.0/migration/: index.html
2.2.0/reference/chunklet/: index.html
2.2.0/search/: search_index.json
2.2.0/supported-languages/: index.html
2.2.0/troubleshooting/: index.html
2.2.0/whats-new/: index.html
2.3.0/: 404.html  index.html  objects.inv  sitemap.xml
2.3.0/exceptions-and-warnings/: index.html
2.3.0/getting-started/cli/: index.html
2.3.0/getting-started/installation/: index.html
2.3.0/getting-started/metadata/: index.html
2.3.0/getting-started/programmatic/: index.html
2.3.0/how-to/custom-tokenizer/: index.html
2.3.0/migration/: index.html
2.3.0/overrides/: main.html
2.3.0/reference/chunklet/: index.html
2.3.0/search/: search_index.json
2.3.0/supported-languages/: index.html
2.3.0/troubleshooting/: index.html
2.3.0/whats-new/: index.html
docs/: exceptions-and-warnings.md  index.md  internal-flow.md  migration.md  models.md  supported-languages.md  troubleshooting.md  utils.md  whats-new.md
docs/getting-started/: cli.md  index.md  installation.md  metadata.md  programmatic.md
docs/getting-started/programmatic/: code_chunker.md  document_chunker.md  index.md  plain_text_chunker.md  sentence_splitter.md  visualizer.md
docs/how-to/: custom-tokenizer.md
docs_2/: exceptions-and-warnings.md  index.md  installation.md  migration.md  supported-languages.md  utils.md
examples/: batch_chunking.py  hybrid_mode.py  pdf_chunking.py  sentence_mode.py  token_mode.py
samples/: example.xlsx  sample_text.txt
src/chunklet/: __init__.py  base_chunker.py  cli.py  code_chunker.py  core.py  document_chunker.py  exceptions.py  exceptions.py.txt  languages.py  models.py  plain_text_chunker.py  presets.py_
src/chunklet/code_chunker/: __init__.py  _code_structure_extractor.py  code_chunker.py  helpers.py  patterns.py  utils.py
src/chunklet/common/: _progress_bar.py  batch_runner.py  deprecation.py  dotdict.py  logging_utils.py  path_utils.py  token_utils.py  validation.py
src/chunklet/document_chunker/: __init__.py  _pdf_processor.py  _plain_text_chunker.py  document_chunker.py  docx_processor.py  pdf_processor.py  registry.py  span_finder.py
src/chunklet/libs/: code_structure_extractor.py  docx_processor.py  pdf_processor.py  universal_splitter.py
src/chunklet/sentence_splitter/: __init__.py  _fallback_splitter.py  _universal_splitter.py  fallback_splitter.py  languages.py  registry.py  sentence_splitter.py  terminators.py
src/chunklet/static/: language_map.json5
src/chunklet/utils/: __init__.py  batch_runner.py  detect_text_language.py  docx_processor.py  error_utils.py  file_utils.py  logger.py  paged_docx_processor.py_  path_utils.py  pdf_processor.py  progress.py  regex_splitter.py  rst_to_md.py  token_utils.py  universal_splitter.py  validation.py
src/chunklet/visualizer/: __init__.py  visualiser.py  visualizer.py
tests/: test_chunklet.py  test_code_chunker.py  test_code_chunking.py  test_document_chunker.py  test_document_chunking.py  test_plain_text_chunker.py  test_plain_text_chunking.py  test_sentence_splitter.py  test_sentence_splitting.py  test_visualization.py  test_visualizer.py
(+167 files in other folders)
